# stellar-contracts--wasms

./: .gitignore  Cargo.toml  README.md  stellar-core-testnet.cfg  test_mock_stellar_core.sh
src/: main.rs  stellar-core-pubnet.cfg  stellar-core-testnet.cfg
