[package]
name = "stellar-contracts-wasms"
version = "0.1.0"
edition = "2021"

[dependencies]
stellar-xdr = { version = "22", features = ["serde"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.20.0"
